--- a/src/Hjmos.CustomCharts/Themes/Styles/Style.xaml
+++ b/src/Hjmos.CustomCharts/Themes/Styles/Style.xaml
@@ -8,5 +8,6 @@
         <ResourceDictionary Source="BigDataMonitor.xaml"/>
         <ResourceDictionary Source="PassengerFlowTrend.xaml"/>
         <ResourceDictionary Source="DeviceAlarmBarChart.xaml"/>
+        <ResourceDictionary Source="SectionPassengerFlowDistribution.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
