--- a/src/Hjmos.BaseControls/Themes/Styles/Style.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/Style.xaml
@@ -42,5 +42,6 @@
         <ResourceDictionary Source="Tag.xaml"/>
         <ResourceDictionary Source="Border.xaml"/>
         <ResourceDictionary Source="TabControl.xaml"/>
+        <ResourceDictionary Source="Badge.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
